fix overflow issues

--- a/media/com_myQuiz/css/style.css
+++ b/media/com_myQuiz/css/style.css
@@ -5,6 +5,12 @@ body {
     background-image: linear-gradient(to bottom right, #0b060a, #272662);
 }
 
+.fixed-height {
+    max-height: calc(100vh - 133px);
+    overflow: auto;
+    scrollbar-width: none;
+}
+
 * {
     color: white;
 }
